Updates for downloading BraTs datasets

--- a/Download_dataset/BraTs_dataset.ipynb
+++ b/Download_dataset/BraTs_dataset.ipynb
@@ -187,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "iaNVq-ij89ER"
       },
@@ -211,9 +211,9 @@
         "    mapping_xlsx_path = mapping_xlsx_entity.path\n",
         "\n",
         "# Now proceed with renaming files\n",
-        "os.rename(training_data_path, os.path.join('dataset', os.path.basename(training_data_path)))\n",
-        "os.rename(validation_data_path, os.path.join('dataset', os.path.basename(validation_data_path)))\n",
-        "os.rename(mapping_xlsx_path, os.path.join('dataset', os.path.basename(mapping_xlsx_path)))"
+        "os.rename(training_data_path, os.path.join('Dataset_BraTs', os.path.basename(training_data_path)))\n",
+        "os.rename(validation_data_path, os.path.join('Dataset_BraTs', os.path.basename(validation_data_path)))\n",
+        "os.rename(mapping_xlsx_path, os.path.join('Dataset_BraTs', os.path.basename(mapping_xlsx_path)))"
       ]
     },
     {
